<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragments.AddAccountFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_marginTop="10dp"
                android:src="@drawable/bottom_sheet_grapple"
                android:layout_gravity="center"
                android:layout_height="wrap_content"/>


            <com.google.android.material.bottomsheet.BottomSheetDragHandleView
                android:id="@+id/drag_handler"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>


            <com.google.android.material.card.MaterialCardView
                app:cardCornerRadius="6dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:strokeColor="@color/grey"
                app:strokeWidth="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/accountName"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:singleLine="true"
                    android:paddingStart="20dp"
                    android:textSize="18sp"
                    android:maxLength="15"
                    android:textColor="@color/black"
                    android:hint="@string/account_name"
                    android:background="@color/white"
                    android:textColorHint="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>


            </com.google.android.material.card.MaterialCardView>


            <com.google.android.material.card.MaterialCardView
                app:cardCornerRadius="6dp"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:strokeColor="@color/grey"
                app:strokeWidth="1dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/usernameEmail"
                    android:paddingTop="12dp"
                    android:paddingBottom="12dp"
                    android:textSize="18sp"
                    android:singleLine="true"
                    android:maxLength="50"
                    android:paddingStart="20dp"
                    android:textColor="@color/black"
                    android:hint="@string/username_email"
                    android:background="@color/white"
                    android:textColorHint="@color/grey"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.card.MaterialCardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="20dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_height="wrap_content">
                <com.google.android.material.card.MaterialCardView
                    android:id="@+id/passColor"
                    app:cardCornerRadius="6dp"
                    app:strokeColor="@color/grey"
                    app:strokeWidth="1dp"
                    android:theme="@style/Theme.MaterialComponents.Light"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/password"
                        android:paddingTop="12dp"
                        android:paddingBottom="12dp"
                        android:paddingStart="20dp"
                        android:hint="@string/password"
                        android:singleLine="true"
                        android:textSize="18sp"
                        android:maxLength="50"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:background="@color/white"
                        android:textColorHint="@color/grey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.card.MaterialCardView>

                <nu.aaro.gustav.passwordstrengthmeter.PasswordStrengthMeter
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/passwordInputMeter"
                    app:strengthBarHeight="5dp"
                    app:animateChanges="true"
                    app:showStrengthLabel="true"
                    app:showStrengthBar="true"
                    app:animationDuration="300"
                    app:labelTextSize="12sp"/>
            </LinearLayout>




            <TextView
                android:id="@+id/addNewAccount"
                android:layout_marginTop="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="30dp"
                android:text="@string/add_new_account"
                android:textSize="20sp"
                android:padding="10dp"
                android:background="@drawable/round"
                android:gravity="center"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </LinearLayout>




</FrameLayout>